<resources>
    <string name="app_name">Stalwart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="add_visitors">Add Visitors</string>
    <string name="exit_visitors">Exit Visitors</string>
    <string name="add_mades">Add Staffs</string>
    <string name="exit_mades">Exit Staffs</string>
    <string name="in_ward">Inwars</string>
    <string name="out_ward">Outword</string>
    <string name="out_ward1">Outword</string>
    <string name="out_ward11">Outword</string>

    <string name="Officer">OfficerName<font color='#FF0000'>*</font></string>
    <string name="Unit">Unit Name<font color='#FF0000'>*</font></string>
    <string name="Location">Location<font color='#FF0000'>*</font></string>
    <string name="DateTime">Date and Time<font color='#FF0000'>*</font></string>
    <string name="desig">Designation<font color='#FF000'>*</font></string>
    <string name="Type">Name<font color='#FF0000'>*</font></string>
    <string name="remark">Remarks<font color='#FF0000'>*</font></string>
    <string name="logname">EnterName<font color='#FF0000'>*</font></string>
    <string name="logunit">Unit Name<font color='#FF0000'>*</font></string>
    <string name="logdat">Date of Incident<font color='#FF0000'>*</font></string>
    <string name="logtime">Time of Incident<font color='#FF0000'>*</font></string>
    <string name="logplace">Place of Incidents<font color='#FF0000'>*</font></string>
    <string name="logintencity">Intensity<font color='#FF0000'>*</font></string>
    <string name="logactiontaken">ActionTaken<font color='#FF0000'>*</font></string>
    <string name="logdescription">Description<font color='#FF0000'>*</font></string>
    <string name="logreportby">Reported By<font color='#FF0000'>*</font></string>
    <string name="logincident">Incident Type<font color='#FF0000'>*</font></string>



    <!--Spinner values for add visitors-->
    <string-array name="sp_addvisitors">
        <item>-- Select Visitors Type --</item>
        <item>Guest</item>
        <item>Pre-authorised Guest</item>
        <item>Delivery Boys</item>
        <item>Others</item>
    </string-array>
    <!--Spinner values for add visitors-->
    <string-array name="sp_madeentry">
        <item>-- Select Input Type --</item>
        <item>QR Code</item>
        <item>BAR Code</item>
        <item>Serial Number</item>
    </string-array>
    <string-array name="sp_outwardtype">
        <item>-- Select Type --</item>
        <item>RGP</item>
        <item>NRGP</item>
    </string-array>

    <string-array name="sp_staffs">
        <item>-- Select Staff Type --</item>
        <item>Mades</item>
        <item>Driver</item>
        <item>Facility</item>
        <item>LPG Supplier</item>
        <item>Water Tanker</item>
        <item>Others</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Visitors Etry</item>
        <item>Visitors Exit</item>
        <item>Staff Entry</item>
        <item>Staff Exit</item>
        <item>In ward</item>
        <item>Out ward</item>
        <item>Out ward</item>
        <item>Out ward</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
