<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/border3"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/intencitytxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintencity"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"/>


        <Spinner
            android:id="@+id/intencity_type"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/customedittext"
            android:layout_toRightOf="@+id/intencitytxt"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incidenttype"
            android:text="@string/logincident"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/intencitytxt"/>

        <Spinner
            android:id="@+id/incident_spin"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            android:layout_below="@+id/intencity_type"
            android:background="@drawable/customedittext"
            android:layout_toRightOf="@+id/incidenttype"
            android:gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desctxt"
            android:text="@string/logdescription"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/incidenttype"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/log_desc"
            android:gravity="top"
            android:paddingLeft="2dp"
            android:layout_below="@+id/incidenttype"
            android:inputType="textMultiLine"
            android:background="@drawable/customedittext"
            android:layout_toRightOf="@+id/desctxt"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/txt_assignto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_desc"
            android:text="Assigned To"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="40dp"/>

        <Spinner
            android:id="@+id/spin_assign"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/customedittext"
            android:layout_toRightOf="@+id/txt_assignto"
            android:layout_below="@+id/log_desc"
            android:gravity="center"/>
        <TextView
            android:id="@+id/actiontxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logactiontaken"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/spin_assign"
            />
        <EditText
            android:id="@+id/log_action"
            android:layout_below="@+id/spin_assign"
            android:layout_width="match_parent"
            android:gravity="top"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:inputType="textMultiLine"
            android:paddingLeft="2dp"
            android:layout_toRightOf="@+id/actiontxt"
            android:layout_marginTop="30dp"
            android:background="@drawable/customedittext"
            />

        <Button
            android:id="@+id/log_next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border1"
            android:layout_below="@+id/log_action"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>

</RelativeLayout>