<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linn">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_layout"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textStyle="bold"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="0dp"/>
        <Spinner
            android:id="@+id/status_id"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/customedittext"
            android:layout_toRightOf="@+id/status"
            android:gravity="center"/>
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">


        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_form1"
                android:visibility="gone">
                <include android:id="@+id/log_incident1"
                    layout="@layout/log_incident1"></include>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_form2"
                android:visibility="gone">
                <include android:id="@+id/log_incident2"
                    layout="@layout/log_incident2"></include>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp"
                android:gravity="center"
                android:id="@+id/log_incident_form">





                <TextView
                    android:id="@+id/unity_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/Unit"
                    android:paddingLeft="10dp"
                    android:gravity="bottom"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />

                <TextView
                    android:id="@+id/dat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/logdat"
                    android:layout_below="@+id/unity_name"/>

                <EditText
                    android:id="@+id/log_date"
                    android:layout_below="@+id/dat"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Date"
                    android:editable="false"
                    android:focusable="false"
                    android:longClickable="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border3"
                    />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/logtime"
                    android:layout_below="@+id/log_date"/>

                <EditText
                    android:id="@+id/log_time"
                    android:layout_below="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Time"
                    android:editable="false"
                    android:focusable="false"
                    android:longClickable="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border3"
                    />


                <TextView
                    android:id="@+id/place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/logplace"
                    android:layout_below="@+id/log_time"/>

                <EditText
                    android:id="@+id/log_place"
                    android:layout_below="@+id/place_txt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Place "
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border3"
                    />



                <TextView
                    android:id="@+id/reportxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logreportby"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/log_place"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/log_reportby"
                    android:layout_below="@+id/reportxt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Reported By"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border3"
                    />







                <Button
                    android:id="@+id/log_next"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/log_reportby"
                    android:text="NEXT"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
